deploy: d059b1ff19b88ba0de0a65b474945929c503ef97

--- a/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
+++ b/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
@@ -80,7 +80,7 @@ At the time of this writing, they support 4 different deployment methods:<br>
 These are: <em>Heroku repo (GIT), GitHub, Dropbox, and Container Registry</em></li>
 </ul>
 <figure class="align-center big-picture">
-<img loading=lazy src=https://cdn-images-1.medium.com/max/2586/1*nHlhh7SkZY1RLuq-r6gxEg.png#center alt="Heroku Deployment Methods"> <figcaption>
+<img loading=lazy src=/img/tech/heroku.png#center alt="Heroku Deployment Methods"> <figcaption>
 <p>Heroku Deployment Methods</p>
 </figcaption>
 </figure>
@@ -103,7 +103,7 @@ These are: <em>Heroku repo (GIT), GitHub, Dropbox, and Container Registry</em></
 <li>Place the Heroku API Key under <strong>Settings ➔ CI / CD ➔ Variables</strong></li>
 </ul>
 <figure class="align-center big-picture">
-<img loading=lazy src=https://cdn-images-1.medium.com/max/2670/1*-Zvvq9z8Zo_7QzmrlUXibA.png#center alt="GitLab CI/CD Settings"> <figcaption>
+<img loading=lazy src=/img/tech/gitlab.png#center alt="GitLab CI/CD Settings"> <figcaption>
 <p>GitLab CI/CD Settings</p>
 </figcaption>
 </figure>
@@ -135,7 +135,7 @@ My deployment script goes like this:</p>
 <h3 id=4-install-buildpack-on-heroku-optional-for-meteor-app>4. Install Buildpack on Heroku (optional) for Meteor app<a hidden class=anchor aria-hidden=true href=#4-install-buildpack-on-heroku-optional-for-meteor-app>#</a></h3>
 <p>I’d recommend using the <a href=https://github.com/AdmitHub/meteor-buildpack-horse>Meteor Buildpack Horse</a> for Meteor app with Heroku which provides easy configuration to start the app. All we need to do is to define the <code>ROOT_URL</code> and <code>MONGO_URL</code>.</p>
 <figure class="align-center big-picture">
-<img loading=lazy src=https://cdn-images-1.medium.com/max/2572/1*rNhKYxKCKzTEymuKMT2zTw.png#center alt="Heroku buildpack settings"> <figcaption>
+<img loading=lazy src=/img/tech/heroku-config.png#center alt="Heroku buildpack settings"> <figcaption>
 <p>Heroku buildpack settings</p>
 </figcaption>
 </figure>
