--- a/tech/logging-with-fluent-bit-influxdb-fig/index.html
+++ b/tech/logging-with-fluent-bit-influxdb-fig/index.html
@@ -164,13 +164,13 @@ Database: fluentbit
 And thus we are ready to run our queries!</p>
 <h3 id=example-query-and-dashboard>Example query and dashboard<a hidden class=anchor aria-hidden=true href=#example-query-and-dashboard>#</a></h3>
 <figure class=align-center>
-<img loading=lazy src=https://cdn-images-1.medium.com/max/2034/1*_Oda4TMOaelQnQ0iGPjE3Q.png#center alt="select everything (*) from a measurement in InfluxDB"> <figcaption>
+<img loading=lazy src=/img/tech/query.png#center alt="select everything (*) from a measurement in InfluxDB"> <figcaption>
 <p>select everything (*) from a measurement in InfluxDB</p>
 </figcaption>
 </figure>
 <p>Using <a href=https://docs.influxdata.com/influxdb/v1.7/query_language/spec/>InfluxQL</a>, you can query and grep only the things that are meaningful to your needs. The Influx Query Language is a lot similar to MySQL or other SQL queries.</p>
 <figure class="align-center big-picture">
-<img loading=lazy src=https://cdn-images-1.medium.com/max/2584/1*RB7AjUCAnyMR2xElAHJ5LA.png#center alt="Show all logs from a particular container"> <figcaption>
+<img loading=lazy src=/img/tech/logs.png#center alt="Show all logs from a particular container"> <figcaption>
 <p>Show all logs from a particular container</p>
 </figcaption>
 </figure>
