deploy: af273af3a440843fd25cae125357171a11c75edf

--- a/life/index.html
+++ b/life/index.html
@@ -11,7 +11,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link href=/assets/css/stylesheet.min.9d530527b2666841fd1c28085916acc5f325b314ac094f406115ef94d426d2a7.css integrity="sha256-nVMFJ7JmaEH9HCgIWRasxfMlsxSsCU9AYRXvlNQm0qc=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://aniskhan001.me/icon/favicon16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://aniskhan001.me/icon/favicon32x32.png>
@@ -21,6 +21,10 @@
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
 <link rel=alternate type=application/rss+xml href=https://aniskhan001.me/life/index.xml>
+<noscript>
+<style>#theme-toggle,.top-link{display:none}</style>
+<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
+</noscript>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
 <meta property="og:title" content="🌴 Life Blogs">
@@ -35,10 +39,6 @@
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
-<noscript>
-<style type=text/css>#theme-toggle,.top-link{display:none}</style>
-<style>@media(prefers-color-scheme:dark){:root{--theme:#1d1e20;--entry:#2e2e33;--primary:rgba(255, 255, 255, 0.84);--secondary:rgba(255, 255, 255, 0.56);--tertiary:rgba(255, 255, 255, 0.16);--content:rgba(255, 255, 255, 0.74);--hljs-bg:#2e2e33;--code-bg:#37383e;--border:#333}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript>
 <header class=header>
 <nav class=nav>
 <div class=logo>
@@ -46,7 +46,7 @@
 <span class=logo-switches>
 </span>
 </div>
-<ul id=menu onscroll=menu_on_scroll()><li>
+<ul id=menu><li>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
 </li>
@@ -54,10 +54,7 @@
 </nav>
 </header>
 <main class=main>
-<header class=page-header>
-<div class=breadcrumbs>
-<a href=https://aniskhan001.me/>💥 Home</a>
-</div>
+<header class=page-header><div class=breadcrumbs><a href=https://aniskhan001.me/>💥 Home</a></div>
 <h1>🌴 Life Blogs</h1>
 <div class=post-description>
 Life experiences shared by Anis Khan
@@ -65,30 +62,42 @@ Life experiences shared by Anis Khan
 </header>
 <article class=post-entry>
 <header class=entry-header>
-<h2>
-জব নিয়ে কিভাবে বিদেশে যাওয়া যায়?
+<h2>জব নিয়ে কিভাবে বিদেশে যাওয়া যায়?
 </h2>
+<p>পর্ব ১ - নিজেকে প্রস্তুত করুন</p>
+</header>
+<section class=entry-content>
+<p>প্রস্তুতি নেয়ার আগে আরো কি কি ব্যাপার মাথায় রাখা দরকার সেই ব্যাপারে আগের পর্বে বলেছিলাম। আশা করি কিভাবে মাইন্ড সেট করা যায় তার কিঞ্চিৎ ধারণা পেয়েছেন। এই পর্বে আসল প্রস্তুতি নিয়ে কথা বলব।
+টেকনিক্যাল নাকি সফট স্কিল চাকরীর জন্য মুলত ২ ধরনের দক্ষতা বা স্কিল লাগে। টেকনিক্যাল স্কিল আর সফট স্কিল। আমরা যারা টেকনিক্যাল ব্যাকগ্রাউন্ডে আছি তারা মাঝে মাঝে একটা ভুল ধারণা পোষণ করি। সেটা হচ্ছে “টেকনিক্যালি সাউন্ড হলেই আমার জব হয়ে যাবে"। অনেকে দেখেছি নিজের স্কিল ভাল মনে করে ইন্টারভিউ বোর্ডে একটা ‘ড্যাম কেয়ার’ ভাব নিয়ে বসে থাকে। কিছু ব্যাপার পছন্দ না হলে তাচ্ছিল্যের সুরে কথা বলে। এইটা আসলে ঠিক না। এইখানে সফট স্কিল অনেক অনেক বেশী গুরুত্বপূর্ণ। যেখানে কাজ করতে যাচ্ছেন সেখানে আপনার ভবিষ্যৎ কলিগ যারা থাকবে তারা যদি আপনার তাচ্ছিল্যতার কারণে হীনমন্যতায় ভুগে তাহলে কিন্তু তারা কর্মক্ষেত্রে তাদের সেরাটা দিতে পারবে না। এবং আপনার সাথে কাজ করার আগ্রহ হারিয়ে ফেলবে। ইন্টারভিউয়ার যখন এই ব্যাপারগুলো নোটিশ করবে তখন “টিম হেলথ” এর কথা চিন্তা করে আপনাকে রিক্রুট করবে না, যত মেধাবীই হন না কেন। কথায় আছে, “দুর্জন বিদ্বান হলেও পরিত্যাজ্য”। যদিও আমাদের দেশে এই প্র্যাকটিসটা বেশীর ভাগ যায়গাতেই দেখা যায় না। দুঃখজনক হলেও সত্যি। তবে বাহিরের উন্নত দেশগুলোতে এটা খুবই গুরুত্বপূর্ণ একটা পয়েন্ট।...</p>
+</section>
+<footer class=entry-footer><span title="2021-09-23 00:00:00 +0000 UTC">September 23, 2021</span>&nbsp;·&nbsp;10 min&nbsp;·&nbsp;Anis Khan</footer>
+<a class=entry-link aria-label="post link to জব নিয়ে কিভাবে বিদেশে যাওয়া যায়?" href=https://aniskhan001.me/life/%E0%A6%9C%E0%A6%AC-%E0%A6%A8%E0%A6%BF%E0%A6%AF%E0%A6%BC%E0%A7%87-%E0%A6%95%E0%A6%BF%E0%A6%AD%E0%A6%BE%E0%A6%AC%E0%A7%87-%E0%A6%AC%E0%A6%BF%E0%A6%A6%E0%A7%87%E0%A6%B6%E0%A7%87-%E0%A6%AF%E0%A6%BE%E0%A6%93%E0%A6%AF%E0%A6%BC%E0%A6%BE-%E0%A6%AF%E0%A6%BE%E0%A6%AF%E0%A6%BC-%E0%A6%AA%E0%A6%B0%E0%A7%8D%E0%A6%AC-%E0%A7%A7/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>জব নিয়ে কিভাবে বিদেশে যাওয়া যায়?
+</h2>
+<p>পর্ব ০ - প্রস্তুতির নেয়ার আগে কি কি প্রস্তুতি নেয়া উচিৎ ;)</p>
 </header>
 <section class=entry-content>
 <p>ইদানীং একটা প্রশ্ন প্রায়ই আসে… কিভাবে জব নিয়ে বিদেশে যাওয়া যায়?
 আমি সম্প্রতি একটা চাকরী নিয়ে জার্মানিতে আসি। ট্রিভাগো নামে একটা কোম্পানিতে সফটওয়্যার ইঞ্জিনিয়ার হিসেবে জয়েন করেছি। গত কয়েক মাসে পরিচিত অনেকেই বাংলাদেশ থেকে জব নিয়ে বিদেশে গিয়েছেন। আগের অফিসের কয়েকজন পরিচিতি কলিগ জার্মানি এসেছেন। কিছুদিন আগে আরেক বন্ধু নেদারল্যান্ড আসল। এক বড় ভাই জাপান যাচ্ছেন। আরেক বড় ভাই পরিবার নিয়ে সাউথ কোরিয়াতে গেল কয়দিন আগে। ইদানীং চাকরী নিয়ে বিদেশ যাওয়ার একটা ট্রেন্ড দেখা যাচ্ছে দেশে। আমি জার্মানি আসার পর পরিচিত অনেকেই জানতে চেয়েছেন কিভাবে জব নিয়ে বিদেশে আসা যায়। ফেসবুকে অনেক প্রশ্ন পেয়েছি এ ব্যাপারে। সবাইকে একই প্রশ্নের উত্তর বার বার দেয়া সময় সাপেক্ষ। তাই ভাবলাম, একটা ব্লগ/ভ্লগ করি, যেখানে কমন সব প্রশ্নের উত্তর আর আমার অভিজ্ঞতা শেয়ার করা যাবে।...</p>
 </section>
-<footer class=entry-footer>
-September 6, 2021&nbsp;·&nbsp;6 min&nbsp;·&nbsp;Anis Khan
-</footer>
+<footer class=entry-footer><span title="2021-09-06 00:00:00 +0000 UTC">September 6, 2021</span>&nbsp;·&nbsp;6 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to জব নিয়ে কিভাবে বিদেশে যাওয়া যায়?" href=https://aniskhan001.me/life/%E0%A6%9C%E0%A6%AC-%E0%A6%A8%E0%A6%BF%E0%A6%AF%E0%A6%BC%E0%A7%87-%E0%A6%95%E0%A6%BF%E0%A6%AD%E0%A6%BE%E0%A6%AC%E0%A7%87-%E0%A6%AC%E0%A6%BF%E0%A6%A6%E0%A7%87%E0%A6%B6%E0%A7%87-%E0%A6%AF%E0%A6%BE%E0%A6%93%E0%A6%AF%E0%A6%BC%E0%A6%BE-%E0%A6%AF%E0%A6%BE%E0%A6%AF%E0%A6%BC-%E0%A6%AA%E0%A6%B0%E0%A7%8D%E0%A6%AC-%E0%A7%A6/></a>
 </article>
-</main><footer class=footer>
-<span>&copy; 2021 <a href=https://aniskhan001.me/>Anis Khan</a></span>
-<span>&#183;</span>
-<span>Powered by <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a></span>
-<span>& <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a></span>
+</main>
+<footer class=footer>
+<span>&copy; 2022 <a href=https://aniskhan001.me/>Anis Khan</a></span>
+<span>
+Powered by
+<a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
+        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a>
+</span>
 </footer>
-<a href=#top aria-label="go to top" title="Go to Top (Alt + G)">
-<button class=top-link id=top-link type=button accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
-</button>
+<a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
 </a>
-<script>window.onload=function(){localStorage.getItem("menu-scroll-position")&&(document.getElementById('menu').scrollLeft=localStorage.getItem("menu-scroll-position"))};function menu_on_scroll(){localStorage.setItem("menu-scroll-position",document.getElementById('menu').scrollLeft)}document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
+<script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
 <script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
 <script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
 </body>
