--- a/tech/index.html
+++ b/tech/index.html
@@ -11,7 +11,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link href=/assets/css/stylesheet.min.9d530527b2666841fd1c28085916acc5f325b314ac094f406115ef94d426d2a7.css integrity="sha256-nVMFJ7JmaEH9HCgIWRasxfMlsxSsCU9AYRXvlNQm0qc=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://aniskhan001.me/icon/favicon16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://aniskhan001.me/icon/favicon32x32.png>
@@ -21,6 +21,10 @@
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
 <link rel=alternate type=application/rss+xml href=https://aniskhan001.me/tech/index.xml>
+<noscript>
+<style>#theme-toggle,.top-link{display:none}</style>
+<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
+</noscript>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
 <meta property="og:title" content="🧑‍💻 Tech Blogs">
@@ -35,10 +39,6 @@
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
-<noscript>
-<style type=text/css>#theme-toggle,.top-link{display:none}</style>
-<style>@media(prefers-color-scheme:dark){:root{--theme:#1d1e20;--entry:#2e2e33;--primary:rgba(255, 255, 255, 0.84);--secondary:rgba(255, 255, 255, 0.56);--tertiary:rgba(255, 255, 255, 0.16);--content:rgba(255, 255, 255, 0.74);--hljs-bg:#2e2e33;--code-bg:#37383e;--border:#333}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript>
 <header class=header>
 <nav class=nav>
 <div class=logo>
@@ -46,7 +46,7 @@
 <span class=logo-switches>
 </span>
 </div>
-<ul id=menu onscroll=menu_on_scroll()><li>
+<ul id=menu><li>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
 </li>
@@ -54,10 +54,7 @@
 </nav>
 </header>
 <main class=main>
-<header class=page-header>
-<div class=breadcrumbs>
-<a href=https://aniskhan001.me/>💥 Home</a>
-</div>
+<header class=page-header><div class=breadcrumbs><a href=https://aniskhan001.me/>💥 Home</a></div>
 <h1>🧑‍💻 Tech Blogs</h1>
 <div class=post-description>
 Technical blogs written by Anis Khan
@@ -65,59 +62,54 @@ Technical blogs written by Anis Khan
 </header>
 <article class=post-entry>
 <header class=entry-header>
-<h2>
-Logging with Fluent Bit & InfluxDB
+<h2>Logging with Fluent Bit & InfluxDB
 </h2>
+<p>Minimal Logging Architecture in Kubernetes with Grafana</p>
 </header>
 <section class=entry-content>
 <p>Motivation For a small Kubernetes cluster, I needed a minimal dashboard where logs from all the running applications in the Kubernetes environment can be viewed or grepped from one place.
 I thought about ELK (Elastic + Logstash + Kibana) first, but then I realized my small cluster has a config of only 2 nodes with a total 2 vCPU and 4GB RAM, which wouldn’t be a wise option for Elastic to run since it requires more resources to run smoothly....</p>
 </section>
-<footer class=entry-footer>
-April 15, 2020&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Anis Khan
-</footer>
+<footer class=entry-footer><span title="2020-04-15 00:00:00 +0000 UTC">April 15, 2020</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to Logging with Fluent Bit & InfluxDB" href=https://aniskhan001.me/tech/logging-with-fluent-bit-influxdb-fig/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
-<h2>
-Easy Continuous Delivery for Meteor app with GitLab + Heroku
+<h2>Easy Continuous Delivery for Meteor app with GitLab + Heroku
 </h2>
+<p></p>
 </header>
 <section class=entry-content>
 <p>Motivation 🌌 🌠 Recently I worked on a MeteorJS project. The live version of the app is hosted on Galaxy and there was no staging environment for this one. So we needed to deploy another instance of this app in a staging environment. The codebase was hosted on GitLab and we have a shared cluster of MongoDB in mLab. While we wanted to run the staging environment efficiently, we also wanted to make sure the deployment is as cost-effective as we can....</p>
 </section>
-<footer class=entry-footer>
-July 30, 2018&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Anis Khan
-</footer>
+<footer class=entry-footer><span title="2018-07-30 00:00:00 +0000 UTC">July 30, 2018</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to Easy Continuous Delivery for Meteor app with GitLab + Heroku" href=https://aniskhan001.me/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
-<h2>
-How I reduced the size of a Docker image
+<h2>How I reduced the size of a Docker image
 </h2>
+<p></p>
 </header>
 <section class=entry-content>
 <p>December 2017, at work, I had to deploy a micro-service very very quickly to support the core service of ours. The framework I used for this one was Sanic, (a micro-framework written in Python 3.5 with Async support). So, I get the python image first along with dependencies in a requirements.txt file. This is how it went:
 FROMpython:3.6ENV PYTHONUNBUFFERED 1ENV TZ=Asia/DhakaRUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezoneRUN mkdir /appADD requirements....</p>
 </section>
-<footer class=entry-footer>
-June 9, 2018&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Anis Khan
-</footer>
+<footer class=entry-footer><span title="2018-06-09 00:00:00 +0000 UTC">June 9, 2018</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to How I reduced the size of a Docker image" href=https://aniskhan001.me/tech/how-i-reduced-the-size-of-a-docker-image/></a>
 </article>
-</main><footer class=footer>
-<span>&copy; 2021 <a href=https://aniskhan001.me/>Anis Khan</a></span>
-<span>&#183;</span>
-<span>Powered by <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a></span>
-<span>& <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a></span>
+</main>
+<footer class=footer>
+<span>&copy; 2022 <a href=https://aniskhan001.me/>Anis Khan</a></span>
+<span>
+Powered by
+<a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
+        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a>
+</span>
 </footer>
-<a href=#top aria-label="go to top" title="Go to Top (Alt + G)">
-<button class=top-link id=top-link type=button accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
-</button>
+<a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
 </a>
-<script>window.onload=function(){localStorage.getItem("menu-scroll-position")&&(document.getElementById('menu').scrollLeft=localStorage.getItem("menu-scroll-position"))};function menu_on_scroll(){localStorage.setItem("menu-scroll-position",document.getElementById('menu').scrollLeft)}document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
+<script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
 <script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
 <script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
 </body>
