deploy: a7237af15ba92ffe25cc836d631046213e89ca8b

--- a/tech/logging-with-fluent-bit-influxdb-fig/index.html
+++ b/tech/logging-with-fluent-bit-influxdb-fig/index.html
@@ -8,9 +8,6 @@
 <meta name=description content="Minimal Logging Architecture in Kubernetes with Grafana">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/tech/logging-with-fluent-bit-influxdb-fig/>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.min.7680afc38aa6b15ddf158a4f3780b7b1f7dde7e91d26f073e6229bb7a0793c92.js integrity="sha256-doCvw4qmsV3fFYpPN4C3sffd5+kdJvBz5iKbt6B5PJI=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
@@ -192,6 +189,10 @@ And thus we are ready to run our queries!</p>
 <a href=https://docs.influxdata.com/influxdb/v1.7/query_language/spec/>https://docs.influxdata.com/influxdb/v1.7/query_language/spec/</a></p>
 </li>
 </ul>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3767738905492647" crossorigin=anonymous></script>
+<ins class=adsbygoogle style=display:block;text-align:center data-ad-layout=in-article data-ad-format=fluid data-ad-client=ca-pub-3767738905492647 data-ad-slot=5298522589>
+</ins>
+<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 </div>
 <footer class=post-footer>
 <ul class=post-tags>
