--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>Anis Khan</title>
-<meta name=keywords content="Blog,Tech,Life,PaperMod">
+<meta name=keywords content="Blog,Tech,Life,Anis Khan">
 <meta name=description content="Enjoying life | Anis Khan">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
 <link rel=preload href=/img/profile.jpg as=image>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
