--- a/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-০/index.html
+++ b/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-০/index.html
@@ -8,9 +8,6 @@
 <meta name=description content="পর্ব ০ - প্রস্তুতির নেয়ার আগে কি কি প্রস্তুতি নেয়া উচিৎ ;)">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/life/%E0%A6%9C%E0%A6%AC-%E0%A6%A8%E0%A6%BF%E0%A6%AF%E0%A6%BC%E0%A7%87-%E0%A6%95%E0%A6%BF%E0%A6%AD%E0%A6%BE%E0%A6%AC%E0%A7%87-%E0%A6%AC%E0%A6%BF%E0%A6%A6%E0%A7%87%E0%A6%B6%E0%A7%87-%E0%A6%AF%E0%A6%BE%E0%A6%93%E0%A6%AF%E0%A6%BC%E0%A6%BE-%E0%A6%AF%E0%A6%BE%E0%A6%AF%E0%A6%BC-%E0%A6%AA%E0%A6%B0%E0%A7%8D%E0%A6%AC-%E0%A7%A6/>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.min.7680afc38aa6b15ddf158a4f3780b7b1f7dde7e91d26f073e6229bb7a0793c92.js integrity="sha256-doCvw4qmsV3fFYpPN4C3sffd5+kdJvBz5iKbt6B5PJI=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
@@ -94,6 +91,10 @@
 <iframe src=https://www.youtube.com/embed/m5teFFW2cbI style=position:absolute;top:0;left:0;width:100%;height:100%;border:0 allowfullscreen title="YouTube Video"></iframe>
 </div>
 </p>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3767738905492647" crossorigin=anonymous></script>
+<ins class=adsbygoogle style=display:block;text-align:center data-ad-layout=in-article data-ad-format=fluid data-ad-client=ca-pub-3767738905492647 data-ad-slot=5298522589>
+</ins>
+<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 </div>
 <footer class=post-footer>
 <ul class=post-tags>
