--- a/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
+++ b/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
@@ -8,9 +8,6 @@
 <meta name=description content="Motivation 🌌 🌠 Recently I worked on a MeteorJS project. The live version of the app is hosted on Galaxy and there was no staging environment for this one. So we needed to deploy another instance of this app in a staging environment. The codebase was hosted on GitLab and we have a shared cluster of MongoDB in mLab. While we wanted to run the staging environment efficiently, we also wanted to make sure the deployment is as cost-effective as we can.">
 <meta name=author content="Anis Khan">
 <link rel=canonical href=https://aniskhan001.me/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.9907859f1602a742fdc62d4c9e2e249f9963bea382ef6df063dede9ce9e2e8dd.css integrity="sha256-mQeFnxYCp0L9xi1Mni4kn5ljvqOC723wY97enOni6N0=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.min.7680afc38aa6b15ddf158a4f3780b7b1f7dde7e91d26f073e6229bb7a0793c92.js integrity="sha256-doCvw4qmsV3fFYpPN4C3sffd5+kdJvBz5iKbt6B5PJI=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://aniskhan001.me/icon/favicon.ico>
@@ -139,6 +136,10 @@ My deployment script goes like this:</p>
 <p>And need to place the URL of this buildpack to Heroku, of course!
 Other available environment vars can be found here: <a href=https://github.com/AdmitHub/meteor-buildpack-horse#environment>github.com/AdmitHub/meteor-buildpack-horse#environment</a></p>
 <p>I hope this short guide is helpful for beginners. Experts, please let me know suggestions and/or room for improvements if there’s any. Cheers!</p>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3767738905492647" crossorigin=anonymous></script>
+<ins class=adsbygoogle style=display:block;text-align:center data-ad-layout=in-article data-ad-format=fluid data-ad-client=ca-pub-3767738905492647 data-ad-slot=5298522589>
+</ins>
+<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 </div>
 <footer class=post-footer>
 <ul class=post-tags>
