deploy: 7879c82d707c8923d3b23ff832ce05732c501821

--- a/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
+++ b/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
@@ -149,10 +149,10 @@ Other available environment vars can be found here: <a href=https://github.com/A
 <li><a href=https://aniskhan001.me/tags/continuous-delivery/>continuous-delivery</a></li>
 </ul>
 <nav class=paginav>
-<a class=prev href=https://aniskhan001.me/tech/logging-with-fluent-bit-influxdb-fig/>
+<a class=prev href=https://aniskhan001.me/tech/speed-up-docker-build-ci-environment/>
 <span class=title>« Prev Page</span>
 <br>
-<span>Logging with Fluent Bit & InfluxDB</span>
+<span>Speed up Docker build in CI environment</span>
 </a>
 <a class=next href=https://aniskhan001.me/tech/how-i-reduced-the-size-of-a-docker-image/>
 <span class=title>Next Page »</span>
