--- a/tech/logging-with-fluent-bit-influxdb-fig/index.html
+++ b/tech/logging-with-fluent-bit-influxdb-fig/index.html
@@ -202,10 +202,10 @@ And thus we are ready to run our queries!</p>
 <li><a href=https://aniskhan001.me/tags/kubernetes/>kubernetes</a></li>
 </ul>
 <nav class=paginav>
-<a class=next href=https://aniskhan001.me/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/>
+<a class=next href=https://aniskhan001.me/tech/speed-up-docker-build-ci-environment/>
 <span class=title>Next Page »</span>
 <br>
-<span>Easy Continuous Delivery for Meteor app with GitLab + Heroku</span>
+<span>Speed up Docker build in CI environment</span>
 </a>
 </nav>
 <div class=share-buttons>
