deploy: 430625f8912d9a7a6d0db7f52c5a2cfae9f296dd

--- a/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
+++ b/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/index.html
@@ -158,7 +158,7 @@ Other available environment vars can be found here: <a href=https://github.com/A
 <a class=prev href=https://aniskhan001.me/tech/speed-up-docker-build-ci-environment/>
 <span class=title>« Prev Page</span>
 <br>
-<span>Speed up Docker build in CI environment</span>
+<span>Speed up Docker build in CI environment 🏎</span>
 </a>
 <a class=next href=https://aniskhan001.me/tech/how-i-reduced-the-size-of-a-docker-image/>
 <span class=title>Next Page »</span>
