--- a/tech/index.html
+++ b/tech/index.html
@@ -69,7 +69,34 @@ Technical blogs written by Anis Khan
 </header>
 <article class=post-entry>
 <header class=entry-header>
-<h2>Logging with Fluent Bit & InfluxDB
+<h2>DevOps vs Programming 🤔
+</h2>
+<p>DevOps Engineer হতে গেলে প্রোগ্রামিং/কোডিং জানা লাগে? 🇧🇩</p>
+</header>
+<section class=entry-content>
+<p>“DevOps Engineer হতে গেলে প্রোগ্রামিং/কোডিং জানা লাগে না।”
+এই ধারণাটা ইদানীং শুনতে পাচ্ছি মাঝে মাঝে। শেষ গত সপ্তাহেও সরাসরি আবার একটা প্রশ্ন পেলাম এরকম, “ভাই আমার কোডিং/প্রোগ্রামিং করতে ভাল লাগে না। কিন্তু শুনেছি DevOps হতে গেলে এইসব কিছু লাগে না। আমাকে সাজেশন দেন কিভাবে DevOps Engineer হতে পারব।” তার প্রতি আমার প্রথম সাজেশন ছিল, “যে কোন একটা প্রোগ্রামিং ল্যাঙ্গুয়েজ ব্যাসিক শিখে আসেন, তারপর বাকি সাজেশন দিব।” :)
+প্রথমেই বলে নেই, “DevOps” শব্দটা গত এক-দেড় দশকের অনেক ট্রেন্ডি ও মতভেদে খুব ‘ক্যুল’ একটা বিষয়। এবং আমার কাছে মনে হয় বিগত কয়েক বছরে টেক জগতে সবচেয়ে বেশী ভুল ধারণার বিস্তার হয়েছে এমন কয়েকটা বিষয়ের মধ্যে DevOps খুবই উপরের সারির একটা টপিক। অনেকদিন ইন্ডাস্ট্রিতে কাজ করেও অনেক রকমের বিতর্কিত ধারণা পোষণ করা সম্ভব। এই যেমন অনেকেই মনে করেন, “DevOps Engineer কোন জব রোল/টাইটেল হতে পারে না”। যেটা আমি ব্যক্তিগতভাবে মোটামোটি সমর্থন করি। কারণ DevOps হচ্ছে এক ধরনের মাইন্ডসেট বা কালচার। কালচার নিয়ে ইঞ্জিনিয়ারিং করার কিছু নেই। এটা অনুশীলন করতে হলে অন্য কিছু ইঞ্জিনিয়ারিং প্র্যাকটিস অনুসরণ করতে হবে, সফটওয়্যার ইঞ্জিনিয়ারিং প্র্যাকটিস অনেকগুলো প্র্যাকটিসের মধ্যে একটা। তবে দিন শেষে সেই মাইন্ডসেটে কাজ ঠিকঠাক ভাবে হলে রোল নিয়ে তেমন মাতামাতি করার কিছু নাই বলেও আমি বিশ্বাস করি। যাই হোক, এই ধারণা নিয়ে অনেক বিতর্ক আছে এবং আলোচনা করতে গেলে অনেক বড় পোস্ট লেখা যাবে। কিন্তু… “DevOps Engineer হতে গেলে প্রোগ্রামিং/কোডিং জানা লাগে না” এই ধারণা অনেক বড় ভুল বলে আমি মনে করি। যেটা ইদানীংকালে অনেক ভার্সিটি পড়ুয়া তরুণদের মধ্যে বিরাজ করছে। কেউ যাতে শুরুর দিকেই পথভ্রষ্ট না হয়ে যায়, সেটা চিন্তা করে ভাবলাম DevOps নিয়ে ইন্ডাস্ট্রিতে কাজ করে আমার যতটুকু ধারণা হয়েছে সেইটা সবার সাথে শেয়ার করি।...</p>
+</section>
+<footer class=entry-footer><span title="2022-09-24 00:00:00 +0000 UTC">September 24, 2022</span>&nbsp;·&nbsp;7 min&nbsp;·&nbsp;Anis Khan</footer>
+<a class=entry-link aria-label="post link to DevOps vs Programming 🤔" href=https://aniskhan001.me/tech/devops-vs-programming/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>OOP থেকে কি শিখলাম? 🎯
+</h2>
+<p>You might think the world is object-oriented. But it's not! 🇧🇩</p>
+</header>
+<section class=entry-content>
+<p>A sample program of mine, but not directly related to OOP or SOLID
+আমরা যারা ভার্সিটিতে কম্পিউটার সায়েন্স বা অন্যান্য ইঞ্জিনিয়ারিং বিষয়ে পড়াশুনা করে এসেছি বা এখনো করছি, মোটামুটি সবারই Object Oriented Programming বা OOP শিখতে হয়েছে। যেখানে Encapsulation, Inheritence, Polymorphism ইত্যাদি বিষয়গুলো থাকে। এবং প্রায় সময়ই OOP বোঝার জন্য কিছু সাধারণ উদাহরণ আমরা দেখে এসেছি.. যেমন Vehicle নামে একটা class. এখান থেকে কমন জিনিসগুলো যেমন চাকা, বডি, ইত্যাদি নিয়ে গাড়ি, বাস, ট্রাক ইত্যাদি object হতে পারে। গাড়ির ক্লাস থেকে আবার কিছু অবজেক্ট রং পরিবর্তন করে লাল গাড়ি, নীল গাড়ি, সবুজ গাড়ি ইত্যাদি হতে পারে। অনেকে পরিবারের সম্পর্ক দিয়ে বোঝার চেষ্টা করে....</p>
+</section>
+<footer class=entry-footer><span title="2020-05-09 00:00:00 +0000 UTC">May 9, 2020</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;Anis Khan</footer>
+<a class=entry-link aria-label="post link to OOP থেকে কি শিখলাম? 🎯" href=https://aniskhan001.me/tech/oop-%E0%A6%A5%E0%A7%87%E0%A6%95%E0%A7%87-%E0%A6%95%E0%A6%BF-%E0%A6%B6%E0%A6%BF%E0%A6%96%E0%A6%B2%E0%A6%BE%E0%A6%AE/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>Logging with Fluent Bit & InfluxDB 🪵
 </h2>
 <p>Minimal Logging Architecture in Kubernetes with Grafana</p>
 </header>
@@ -78,11 +105,11 @@ Technical blogs written by Anis Khan
 I thought about ELK (Elastic + Logstash + Kibana) first, but then I realized my small cluster has a config of only 2 nodes with a total 2 vCPU and 4GB RAM, which wouldn’t be a wise option for Elastic to run since it requires more resources to run smoothly....</p>
 </section>
 <footer class=entry-footer><span title="2020-04-15 00:00:00 +0000 UTC">April 15, 2020</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Anis Khan</footer>
-<a class=entry-link aria-label="post link to Logging with Fluent Bit & InfluxDB" href=https://aniskhan001.me/tech/logging-with-fluent-bit-influxdb-fig/></a>
+<a class=entry-link aria-label="post link to Logging with Fluent Bit & InfluxDB 🪵" href=https://aniskhan001.me/tech/logging-with-fluent-bit-influxdb-fig/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
-<h2>Speed up Docker build in CI environment
+<h2>Speed up Docker build in CI environment 🏎
 </h2>
 <p></p>
 </header>
@@ -91,7 +118,7 @@ I thought about ELK (Elastic + Logstash + Kibana) first, but then I realized my 
 That’s right! If you are building Docker images in your local machine, you are doing it wrong. We don’t want to build anything on our laptop. When we are tagging a new release for production, staging, or even for a dev environment, the build should trigger automatically to save time and avoid the hassle....</p>
 </section>
 <footer class=entry-footer><span title="2020-01-14 00:00:00 +0000 UTC">January 14, 2020</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Anis Khan</footer>
-<a class=entry-link aria-label="post link to Speed up Docker build in CI environment" href=https://aniskhan001.me/tech/speed-up-docker-build-ci-environment/></a>
+<a class=entry-link aria-label="post link to Speed up Docker build in CI environment 🏎" href=https://aniskhan001.me/tech/speed-up-docker-build-ci-environment/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
@@ -105,19 +132,11 @@ That’s right! If you are building Docker images in your local machine, you are
 <footer class=entry-footer><span title="2018-07-30 00:00:00 +0000 UTC">July 30, 2018</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Anis Khan</footer>
 <a class=entry-link aria-label="post link to Easy Continuous Delivery for Meteor app with GitLab + Heroku" href=https://aniskhan001.me/tech/easy-continuous-delivery-for-meteor-app-with-gitlab-heroku/></a>
 </article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>How I reduced the size of a Docker image
-</h2>
-<p></p>
-</header>
-<section class=entry-content>
-<p>December 2017, at work, I had to deploy a micro-service very very quickly to support the core service of ours. The framework I used for this one was Sanic, (a micro-framework written in Python 3.5 with Async support). So, I get the python image first along with dependencies in a requirements.txt file. This is how it went:
-FROMpython:3.6ENV PYTHONUNBUFFERED 1ENV TZ=Asia/DhakaRUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezoneRUN mkdir /appADD requirements....</p>
-</section>
-<footer class=entry-footer><span title="2018-06-09 00:00:00 +0000 UTC">June 9, 2018</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Anis Khan</footer>
-<a class=entry-link aria-label="post link to How I reduced the size of a Docker image" href=https://aniskhan001.me/tech/how-i-reduced-the-size-of-a-docker-image/></a>
-</article>
+<footer class=page-footer>
+<nav class=pagination>
+<a class=next href=https://aniskhan001.me/tech/page/2/>Next Page »</a>
+</nav>
+</footer>
 </main>
 <footer class=footer>
 <span>&copy; 2022 <a href=https://aniskhan001.me/>Anis Khan</a></span>
